fix bug dropdown select on mobile views

--- a/vubin/dashboard/content/css/general-style.css
+++ b/vubin/dashboard/content/css/general-style.css
@@ -1,3 +1,35 @@
+.company-form .title-header-dashboard {
+    font-size: 1.5em;
+    color: #3d91ff;
+    padding-bottom: 3rem;
+}
+.company-form .top-footer {
+    padding-top: 2rem;
+}
+.company-form .breadcrumb-custom:before {
+    width: 6px;
+    height: 13px;
+    content: url(../images/breadcrumb.png);
+    margin-right: 1rem;
+    position: relative;
+    top: 1px;
+}
+.company-form .form-select .bootstrap-select > .btn {
+    border-color: #979797;
+}
+.company-form .form-select .bootstrap-select.btn-group .btn .filter-option {
+    color: #9b9b9b;
+}
+.company-form .breadcrumb-custom {
+    font-size: 0.928em;
+    color: #9b9b9b;
+}
+.company-form .para-breadcrumb {
+    padding-bottom: 2.5rem;
+}
+.kuyam-content .company-form .form-control {
+    border-color: #979797;
+}
 .kuyam-content .company-form .form-label-custom {
      font-size: 1.5em;
      color: #232323;
@@ -7,10 +39,13 @@
     padding-top: 0;
 }
 .kuyam-content .company-form-custom footer {
-    padding-top: 22px;
+    padding-top: 0px;
 }
 .kuyam-content .company-form .notes-text {
     padding-top: 0.4rem;
+}
+.kuyam-content .company-form-custom div[class*="col-"] {
+    margin-bottom: 30px;
 }
 .kuyam-content .company-form h3 {
     font-size: 0.9em;
@@ -160,6 +195,12 @@
 .payment-booking-info .policy-section .contact-info-checkbox .radio-mark:checked ~ .radio-label {
     color: #3B93FF;
     font-weight: 600;
+}
+.kuyam-content .basic-info .input-address {
+    margin-bottom: 0;
+}
+.kuyam-content .basic-info .input-address .form-placeholder {
+    margin-bottom: 1rem;
 }
 /* select slide*/
 .select-content-slide {
